[tool.poetry]
name = "fastapi-neo4j"
version = "0.1.0"
description = "A simple starter for building RESTful APIs with FastAPI and NEO4J."
authors = ["Darix SAMANI SIEWE <samanidarix@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.111.0"
neontology = "^1.3.1"
numpy = "1.24.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
